src/components/About/About.module.css
@import "../../vars.css";

.container {
  position: relative;
  background-color: rgba(12, 12, 12, 0.6);
  border-radius: 15px;
  padding: 7.4rem;
  margin-top: 12.8rem;
  z-index: 1;
  margin-inline: 10%;
}

.title {
  color: var(--color-text);
  font-size: 3.6rem;
  margin-bottom: 2.4rem;
  font-weight: 700;

  letter-spacing: 1.75px;
  text-transform: uppercase;
}

.icons {
  stroke: #83a8db;
  fill: #235599;
  width: 60px;
  height: 60px;
}

.content {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.aboutImage {
  border-radius: 13%;
  width: 26%;
  padding-right: 0.5%;
}

.aboutItems {
  color: var(--color-text);
  display: flex;
  flex-direction: column;
  gap: 4.8rem;
}

.aboutItem {
  display: flex;
  flex-direction: row;
  align-items: center;
  border-radius: 20px;
  gap: 0.4rem;
  list-style: none;
  padding: 2.4rem;
  background-image: linear-gradient(
    90deg,
    rgba(165, 215, 232, 0.42) 0%,
    rgba(255, 255, 255, 0) 100%
  );
  background-size: 0 100%;
  background-repeat: no-repeat;
  transition: 0.4s;
}

.aboutItem:hover {
  background-size: 100% 100%;
}

.aboutItem h3 {
  font-size: 2.4rem;
  font-weight: 600;
}

.aboutItem p {
  font-size: 2.4rem;
}

/* 1250px Approx */
@media (max-width: 78em) {
  .aboutItem {
    gap: 1.2rem;
  }
}

@media (max-width: 52em) {
  .container {
    background-color: transparent;
    padding-inline: 0;
    padding-top: 0;
    padding-bottom: 8rem;
  }

  .content {
    flex-direction: column;
  }

  .aboutImage {
    display: none;
  }

  .aboutItems {
    margin-top: 29px;
  }

  .aboutItem {
    padding-inline: 0;
  }
}

/* 640px Approx */
@media (max-width: 40em) {
  .content {
    margin-top: 4.8rem;
  }

  .aboutItem {
    background-image: none;
  }

  .aboutItem:hover {
    background-size: auto;
  }

  .aboutItems {
    gap: 6.4rem;
    margin-top: 0;
    background-image: none;
  }

  .aboutItem {
    padding: 0;
    flex-direction: column;
    gap: 2.4rem;
  }

  .aboutItem h3 {
    font-size: 2rem;
    margin-bottom: 1.6rem;
  }

  .aboutItem p {
    font-size: 1.6rem;
    line-height: 1.6;
  }

  .icons {
    width: 4.8rem;
    height: 4.8rem;
  }
}

/* 
- Font sizes (px)
10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98

- Spacing system (px)
2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
*/

